--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -6,11 +6,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
+        android:id="@+id/imageview"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:id="@+id/imageview"
-        android:layout_marginRight="10dp"
-        android:layout_centerVertical="true"/>
+        android:layout_centerVertical="true"
+        android:layout_marginRight="10dp" />
 
     <TextView
         android:layout_width="match_parent"
