--- a/app/src/main/res/layout/activity_detalhes.xml
+++ b/app/src/main/res/layout/activity_detalhes.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/imageDetalhes"
+        android:layout_width="82dp"
+        android:layout_height="87dp"
         android:layout_marginStart="43dp"
-        android:layout_marginTop="41dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="75dp"
         app:layout_constraintEnd_toStartOf="@+id/txtNome"
+        app:layout_constraintHorizontal_bias="0.147"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -21,8 +22,8 @@
         android:id="@+id/txtNome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="107dp"
+        android:layout_marginTop="128dp"
+        android:layout_marginEnd="56dp"
         android:text="nome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -37,7 +38,7 @@
         android:text="sinopse"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageDetalhes" />
 
     <TextView
         android:id="@+id/txtEditora"
@@ -64,13 +65,13 @@
         app:layout_constraintTop_toBottomOf="@+id/txtEditora" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonReturnDetalhes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="276dp"
         android:layout_marginEnd="45dp"
         android:layout_marginBottom="34dp"
-        android:text="Beleza"
+        android:text="Voltar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
