--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -31,6 +31,7 @@
         android:textColor="@color/black"
         tools:text="Email"
         />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="2dp"
@@ -39,5 +40,21 @@
             android:background="#DAD8D8"
 
             />
+
+    <Button
+        android:id="@+id/deletarBotao"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="20dp"
+        android:text="Button" />
+
+    <Button
+        android:id="@+id/botaoEditar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:layout_toStartOf="@+id/deletarBotao"
+        android:text="Button" />
 
 </RelativeLayout>
