--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -47,14 +47,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="20dp"
-        android:text="Button" />
-
-    <Button
-        android:id="@+id/botaoEditar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:layout_toStartOf="@+id/deletarBotao"
-        android:text="Button" />
+        android:text="Del" />
 
 </RelativeLayout>
