--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -9,11 +9,11 @@
         android:id="@+id/botaoCadastro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="92dp"
         android:text="Salvar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputImagem" />
+        app:layout_constraintTop_toBottomOf="@+id/inputAno" />
 
     <EditText
         android:id="@+id/inputNome"
@@ -66,27 +66,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inpuEditora" />
 
-    <Button
-        android:id="@+id/inputImagem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="imagem"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputAno" />
-
     <ImageView
         android:id="@+id/imageViewCadastro"
-        android:layout_width="87dp"
-        android:layout_height="107dp"
-        android:layout_marginStart="163dp"
+        android:layout_width="129dp"
+        android:layout_height="98dp"
         android:layout_marginTop="64dp"
-        android:layout_marginEnd="161dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/black" />
+        app:srcCompat="@drawable/add"
+        tools:srcCompat="@drawable/add" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
