--- a/app/src/main/res/layout/activity_detalhes.xml
+++ b/app/src/main/res/layout/activity_detalhes.xml
@@ -37,6 +37,7 @@
         android:layout_marginEnd="271dp"
         android:text="sinopse"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageDetalhes" />
 
